# bug_fixer

./: README.md  pyproject.toml
.github/workflows/: ci.yml
bug_fixer/: hooks.py  modules.txt
bug_fixer/bug_fixer/: __init__.py
bug_fixer/overrides/: payment_entry.py
